Date function added Delete frame function added Bad performance in poor network condition, might be fixed by a "timeout" restriction

--- a/Analog/Info.plist
+++ b/Analog/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Allow to record your current vantage point</string>
+	<string>Please allow to record your vantage point</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
